force-app/main/default/objects/MS_FSM_EtaHub_Integration_Definition__c/MS_FSM_EtaHub_Integration_Definition__c.object-meta.xml
<CustomObject>
    <label>EtaHub Integration Definition</label>
    <nameField>
        <label>EtaHub Integration Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EtaHub Integration Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>