force-app/main/default/objects/MS_FSM_EtaHub_Integration_Definition__c/fields/MS_FSM_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Data_Type__c</fullName>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>decimal</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>datetime</fullName>
            </value>
            <value>
                <fullName>boolean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>