force-app/main/default/objects/MS_FSM_EtaHub_Integration_Definition__c/fields/MS_FSM_EH_Column_Name__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_EH_Column_Name__c</fullName>
    <label>EH Column Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>