force-app/main/default/objects/MS_FSM_EtaHub_Integration_Definition__c/fields/MS_FSM_EH_Column_Number__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_EH_Column_Number__c</fullName>
    <label>EH Column Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>