force-app/main/default/objects/MS_FSM_EtaHub_Integration_Definition__c/fields/MS_FSM_EH_Table_Id__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_EH_Table_Id__c</fullName>
    <label>EH Table Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>