force-app/main/default/objects/MS_FSM_EtaHub_Integration_Definition__c/fields/MS_FSM_External_Id__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>