force-app/main/default/objects/MS_FSM_EtaHub_Integration_Definition__c/fields/MS_FSM_Target_Field__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Target_Field__c</fullName>
    <label>Target Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>